--- a/styles.css
+++ b/styles.css
@@ -445,6 +445,18 @@ footer {
 
 @media only screen and (max-width: 600px) {
 
+    .no-js #loader { display: none;  }
+    .js #loader { display: block; position: absolute; left: 100px; top: 0; }
+    .se-pre-con {
+        position: fixed;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        z-index: 9999;
+        background: url(pre_loader_3_mobile.gif) center no-repeat #fff;
+    }
+
     .intro img {
         height: 150px;
         width: auto;
