--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Paste this css to your style sheet file or under head tag */
-/* This only works with JavaScript, 
+/* This only works with JavaScript,
 if it's not present, don't show loader */
 .no-js #loader { display: none;  }
 .js #loader { display: block; position: absolute; left: 100px; top: 0; }
@@ -408,7 +408,7 @@ footer {
 .card-container {
   display: grid;
   padding: 2rem 8rem;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
   grid-gap: 4rem 1rem;
 }
 
@@ -420,15 +420,15 @@ footer {
 
 .project-entity {
     position: relative;
-    min-width: 350px;
-    max-width: 350px;
+    min-width: 100%;
+    max-width: 100%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding-bottom: 20px;
 }
 
 .project-entity img {
-    width: 350px;
-    height: 160px;
+    width: 100%;
+    height: 180px;
 }
 
 .project-entity .content {
@@ -610,6 +610,6 @@ footer {
         display: none;
     }
 
-    
+
 
 }
