fix contact font size, minor UI changes

--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,7 @@ body {
 
 .intro-content h2 {
     font-family: 'Varela Round', sans-serif;
+    font-size: 30px;
 }
 
 .intro img {
@@ -139,7 +140,7 @@ body {
     border-color: yellow;
     border-width: medium;
     margin: 20px;
-    height: 200px;
+    height: 190px;
     width: auto;
     border-radius: 50%;
 }
@@ -273,6 +274,8 @@ body {
 }
 
 .contact {
+    /*font-family: 'Source Code Pro', monospace; */
+    font-family: 'Varela Round', sans-serif;
     margin-left: 15%;
     margin-right: 15%;
     margin-top: 100px;
@@ -290,6 +293,7 @@ body {
 
 .contact button {
     margin-top: 30px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .bg-purple {
